--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/GraPortfolio.loader.js";
       var config = {
-        dataUrl: buildUrl + "/05673115461469d27810f0c3cd1d2ba9.data.br",
-        frameworkUrl: buildUrl + "/fbcd78aa923e65c1cb013a6b900d6a44.js.br",
-        codeUrl: buildUrl + "/326c127daa62b2746d4fa46ca0b21066.wasm.br",
+        dataUrl: buildUrl + "/25df8a8e2f0d8c5921f6403b813d2cc1.data",
+        frameworkUrl: buildUrl + "/fbcd78aa923e65c1cb013a6b900d6a44.js",
+        codeUrl: buildUrl + "/326c127daa62b2746d4fa46ca0b21066.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "sew",
