--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | sew</title>
+    <title>Unity WebGL Player | MMM</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1300 height=700 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=1350 height=760 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">sew</div>
+        <div id="unity-build-title">MMM</div>
       </div>
     </div>
     <script>
@@ -59,12 +59,12 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/GraPortfolio.loader.js";
       var config = {
-        dataUrl: buildUrl + "/e02010f3afb1c6ec2a242e0c9f8ee46f.data",
+        dataUrl: buildUrl + "/b449a37ccb5772111ed8ad9f12e20f95.data",
         frameworkUrl: buildUrl + "/fbcd78aa923e65c1cb013a6b900d6a44.js",
         codeUrl: buildUrl + "/326c127daa62b2746d4fa46ca0b21066.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "sew",
+        productName: "MMM",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
@@ -94,8 +94,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "1300px";
-        canvas.style.height = "700px";
+        canvas.style.width = "1350px";
+        canvas.style.height = "760px";
       }
 
       loadingBar.style.display = "block";
